--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 body {
+    margin-top: 0;
     background-color: #1E4A95;
     display: flex;
     flex-direction: column;
@@ -6,6 +7,7 @@ body {
 }
 
 h1 {
+    margin: 0;
     display: flex;
     flex-direction: column;
     align-items: center;
